2007-06-22  Matthew Allum  <mallum@openedhand.com>

	* src/composite/composite-engine.c:
	* src/composite/timeline.c: 
	Drop timeline frames if animation cant keep up. 
	Safer removal of timelines for closed clients.
	* src/dialog_client.c:
	Experiment with translucent static dialogs.

2007-06-20  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	Fix a typo.
	* src/composite/composite-engine.c:
	Unset transparency when full opacity is reached. 
	Speeds things up and avoids some odd artifacts. 

2007-06-18  Matthew Allum  <mallum@openedhand.com>

	* src/composite/composite-engine.c:
	* src/composite/timeline.c:
	* src/structs.h:
	Fixups so dialogs/overrides fade in with basic timelines

2007-06-15  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	* src/Makefile.am:
	* src/composite-engine.c:
	* src/composite-engine.h:
	* src/composite/Makefile.am:
	* src/composite/composite-engine.c:
	* src/composite/timeline.c:
	* src/composite/timeline.h:
	* src/structs.h:
	* src/wm.c: 
	Update to require newer composite libs
	Use named pixmaps.
	Addition of rough (broken) timeline code with prototype code
	for window fade ins. 

===================== Branch Point ===============================

2007-05-25  Matthew Allum  <mallum@openedhand.com>

	* src/client_common.c: (client_button_do_ops):
	Send button number with 'grab tranfer' (#334)
	(Via Tapani)

2007-04-26  Matthew Allum  <mallum@openedhand.com>

	* src/ewmh.c: (ewmh_init), (ewmh_update_lists):
	* src/structs.h:
	Add new _MB_NUM_SYSTEM_MODAL_WINDOWS_PRESENT prop.

2007-04-23  Matthew Allum  <mallum@openedhand.com>

	* src/wm.c: (wm_make_new_client):
	Make sure dialog ABOVE state is inherited. (via Tapani)

2007-04-13  =============== 1.2 Release. =====================

2007-04-13  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	Bump up for 1.2 release

2007-03-19  Matthew Allum  <mallum@openedhand.com>

	* src/ewmh.c: (ewmh_init):
	* src/structs.h:
	* src/wm.c: (wm_make_new_client):